--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "request": "~2.27.0",
     "cheerio": "~0.12.4",
     "lodash": "~2.3.0",
-    "async": "~0.2.9"
+    "async": "~0.2.9",
+    "colors": "~0.6.2"
   }
 }
