--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cheerio": "~0.12.4",
     "lodash": "~2.3.0",
     "async": "~0.2.9",
-    "colors": "~0.6.2"
+    "colors": "~0.6.2",
+    "slug": "~0.4.0"
   }
 }
