rewrote kruel, named it swipe. it's tight.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "crawls sites and stashes PDPs in a large database",
   "main": "main.js",
   "scripts": {
+    "start": "node swipe",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
