--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lodash": "~2.3.0",
     "async": "~0.2.9",
     "colors": "~0.6.2",
-    "slug": "~0.4.0"
+    "slug": "~0.4.0",
+    "optimist": "~0.6.0"
   }
 }
