--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "slug": "^0.5.0",
     "optimist": "^0.6.1",
     "cheerio": "^0.17.0",
-    "benny-hanes-socket-pool": "^1.0.2"
+    "benny-hanes-socket-pool": "^1.0.2",
+    "rollbar": "^0.3.13"
   }
 }
