--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "optimist": "^0.6.1",
     "cheerio": "^0.17.0",
     "benny-hanes-socket-pool": "^1.0.2",
-    "rollbar": "^0.3.13"
+    "rollbar": "^0.3.13",
+    "redis": "^0.12.1"
   }
 }
