--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
   "author": "johnny domino",
   "license": "private",
   "dependencies": {
-    "request": "^2.40.0",
-    "lodash": "^2.4.1",
     "async": "^0.9.0",
-    "colors": "^0.6.2",
-    "slug": "^0.5.0",
-    "optimist": "^0.6.1",
-    "cheerio": "^0.17.0",
     "benny-hanes-socket-pool": "^1.0.2",
+    "cheerio": "^0.17.0",
+    "colors": "^0.6.2",
+    "lodash": "^2.4.1",
+    "optimist": "^0.6.1",
+    "redis": "^0.12.1",
+    "request": "^2.40.0",
     "rollbar": "^0.3.13",
-    "redis": "^0.12.1"
+    "slug": "^0.5.0"
   },
   "devDependencies": {
     "chai": "^1.9.2",
