--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cheerio": "^0.17.0",
     "colors": "^0.6.2",
     "lodash": "^2.4.1",
+    "moment": "^2.8.3",
     "optimist": "^0.6.1",
     "redis": "^0.12.1",
     "request": "^2.40.0",
