--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "benny-hanes-socket-pool": "^1.0.2",
     "cheerio": "^0.17.0",
     "colors": "^0.6.2",
+    "handlebars": "^2.0.0",
     "hapi": "^7.0.0",
     "lodash": "^2.4.1",
     "moment": "^2.8.3",
